--- a/style.css
+++ b/style.css
@@ -1,4 +1,23 @@
 body{
     background-color: #d9d9d9;
 }
+.navigation{
+    font-family:"Jersey 25", sans-serif;
+    display: block;
+    padding: 8px;
+    background-color: #464444;
+    text-decoration: none;
+}
+.home{
+    font-size: 50px;
+    color: #ffff;
+}
+ul{
+    display: inline;
+}
+.nav{
+    font-size: 30px;
+    color: #ffff;
+}
+
 
