--- a/style.css
+++ b/style.css
@@ -18,6 +18,59 @@ ul{
 .nav{
     font-size: 30px;
     color: #ffff;
-}
 
+}
+.introduction{
+    font-family:"Jersey 25", sans-serif;
+    font-size: 40px;
+}
+.name{
+    padding-right: 80px;
+    padding-left: 30px;
+    padding-bottom: 0px;
+    line-height: 0;
+    letter-spacing: 5px;
+}
+.year{
+    padding-right: 70px;
+    padding-left: 130px;
+    line-height: 0;
+    letter-spacing: 10px;
+}
+.contact{
+    font-size: 25px;
+    color: #ffff;
+    text-align: center;
+    padding-top: 10px;
+}
+.homepicture1{
+    box-sizing: border-box;
+}
+.homepicture1{
+    border-radius: 15px;
+    height:295px;
+    position: relative;
+    transform-origin: 0 0;
+    transform: rotate(-13deg) scale(1,1);
+    object-fit: cover;
+    margin-left: 700px;
+    margin-right:50px;
+    background-position: top;
+}
+.homepicture2{
+    box-sizing: border-box;
+}
+.homepicture2{
+    border-radius: 15px;
+    height:365px;
+    position: relative;
+    box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
+    transform-origin: 0 0;
+    transform: rotate(6deg) scale(1,1);
+    opacity: 0.5;
+    object-fit: cover;
+    margin-left: 900px;
+    margin-right:40px;
+
+}
 
