Debugged flex conflict and nested divs
Debugged Flexbox id/element tags conflict and nested divs a little.
Hope this helps!

--- a/style.css
+++ b/style.css
@@ -66,6 +66,11 @@ ul{
 
 .introduction{
     font-size: 40px;
+    /*Added flexbox to the overarching tag element*/
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .name{
     padding-right: 80px;
