--- a/style.css
+++ b/style.css
@@ -10,8 +10,13 @@ body{
     border-radius: 20px;
     margin-left: 30px;
     display: block;
-    align-items:center;
-    justify-content: center;
+    align-items:left;
+    justify-content: left;
+    transition: all 0.5s ease;
+}
+.square1:active{
+    width:200px;
+    height:100px;
 }
 .square2{
     height: 50px;
@@ -28,6 +33,7 @@ body{
     background-color: #464444;
     text-decoration: none;
     position: fixed;
+    display: flex;
 }
 .home{
     font-size: 50px;
@@ -66,13 +72,16 @@ ul{
 
 .introduction{
     font-size: 40px;
-    /*Added flexbox to the overarching tag element*/
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: left;
+    text-align: left;
+    padding-top: 10rem;
 }
 .name{
+    margin: 1rem 0;
     padding-right: 80px;
     padding-left: 30px;
     padding-bottom: 0px;
@@ -80,52 +89,69 @@ ul{
     letter-spacing: 5px;
 }
 .year{
+    margin: 1rem 0;
     padding-right: 70px;
     padding-left: 130px;
     line-height: 0;
     letter-spacing: 10px;
 }
-.contact{
-    font-size: 25px;
-    color: #ffff;
-    text-align: center;
-    padding-top: 10px;
+.button-container {
+    display: flex; 
+    justify-content: left;
+    margin-left: 1rem;
+    gap: 20px;
+    margin-top: 20px;
 }
-.feedback{
-    font-size: 25px;
-    color: #ffff;
-    text-align: center;
-    padding-top: 10px;
+.contact, .feedback {
+    padding: 10px 20px;
+    font-size: 18px;
+    border-radius: 10px;
+    background-color: #464444;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-family: "Jersey 25",sans-serif;
+}
+.contact:hover, .feedback:hover{
+    opacity: 0.9;
+}
+.homepicture1, .homepicture2{
+    margin-top: 8rem;
 }
 .homepicture1{
     box-sizing: border-box;
 }
 .homepicture1{
+    top:10rem;
     border-radius: 15px;
-    height:295px;
-    position: relative;
-    transform-origin: 0 0;
-    transform: rotate(-13deg) scale(1,1);
-    object-fit: cover;
+    width: 380px;
+    height: 294.56px;
+    position: absolute;
     margin-left: 700px;
-    margin-right:50px;
-    background-position: top;
-    z-index: -1;
+    margin-right:20rem;
+    top: 203px;
+    transform-origin: 0 0;
+    transform: rotate(-13deg) scale(1, 1);
+    object-fit: cover;
+    z-index: -8;
 }
 .homepicture2{
     box-sizing: border-box;
 }
 .homepicture2{
+    top:10rem;
     border-radius: 15px;
-    height:365px;
-    position: relative;
-    box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
+    width: 430px;
+    height: 365px;
+    position: absolute;
+    margin-left: 65rem;
+    margin-right:2rem;
+    top: 0px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     transform-origin: 0 0;
-    transform: rotate(6deg) scale(1,1);
-    opacity: 0.5;
+    transform: rotate(6deg) scale(1, 1);
+    mix-blend-mode: soft-light;
     object-fit: cover;
-    margin-left: 900px;
-    margin-right:40px;
     z-index: -10;
 }
 
@@ -206,9 +232,6 @@ ul{
     left: 0;
     z-index: -1;
 }
-.rectangle1:hover{
-    opacity: 0.5;
-}
 .rectangle2{
     height: 350px;
     width:435px;
@@ -218,9 +241,6 @@ ul{
     display: block;
     left: 475px;
     z-index: -1;
-}
-.rectangle2:hover{
-    opacity: 0.5;
 }
 .rectangle3{
     height: 350px;
@@ -232,6 +252,15 @@ ul{
     left: 950px;
     z-index: -1;
 }
-.rectangle3:hover{
+.rectangle1:hover, .rectangle2:hover, .rectangle3:hover {
     opacity: 0.5;
+}
+.rectangle1, .rectangle2, .rectangle3 {
+    transition: 0.3s;
+}
+.projects a {
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    height: 100%;
 }
