--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ body{
     width: 150px;
     background-color:#464444;
     border-radius: 20px;
-    align-items:center;
-    justify-content: center;
+    align-items:left;
+    justify-content: left;
 }
 
 .navigation{
@@ -156,7 +156,9 @@ ul{
 }
 
 
-
+.about{
+    margin-top: 10rem;
+}
 .aboutTitle{
     font-size: 60px;
     text-align: center;
@@ -175,12 +177,16 @@ ul{
     font-size: 45px;
     position: relative;
     height: 35px;
+    padding: 0;
+    margin: 0;
     z-index: -1;
 }
 .aboutDescription{
     text-align: center;
     font-size: 30px;
     position: relative;
+    padding: 10px;
+    margin: 0;
     height: 245px;
     z-index: -1;
 }
@@ -198,14 +204,24 @@ ul{
     position: relative;
     z-index: -1;
 }
-.toolsName{
-    color: white;
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-size: 25px;
-    z-index: -1;
+.button-container2{
+    display: flex; 
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+    padding: 15px 30px;
 }
+.toolsName{
+    padding: 10px 20px;
+    font-size: 18px;
+    border-radius: 10px;
+    background-color: #464444;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-family: "Jersey 25",sans-serif;
+}
+
 
 
 
