--- a/style.css
+++ b/style.css
@@ -3,29 +3,6 @@ body{
     font-family:"Jersey 25", sans-serif;
 }
 
-.square1{
-    height: 50px;
-    width: 150px;
-    background-color:#464444;
-    border-radius: 20px;
-    margin-left: 30px;
-    display: block;
-    align-items:left;
-    justify-content: left;
-    transition: all 0.5s ease;
-}
-.square1:active{
-    width:200px;
-    height:100px;
-}
-.square2{
-    height: 50px;
-    width: 150px;
-    background-color:#464444;
-    border-radius: 20px;
-    align-items:left;
-    justify-content: left;
-}
 
 .navigation{
     display: block;
@@ -98,6 +75,7 @@ ul{
 .button-container {
     display: flex; 
     justify-content: left;
+    padding: 10px 20px;
     margin-left: 1rem;
     gap: 20px;
     margin-top: 20px;
@@ -111,6 +89,11 @@ ul{
     border: none;
     cursor: pointer;
     font-family: "Jersey 25",sans-serif;
+    overflow: hidden;
+    transition: all 0.5s ease-in-out;
+}
+.contact:hover, .feedback:hover{
+    padding: 30px 40px;
 }
 .contact:hover, .feedback:hover{
     opacity: 0.9;
@@ -209,11 +192,11 @@ ul{
     justify-content: center;
     gap: 20px;
     margin-top: 20px;
-    padding: 15px 30px;
+    padding: 30px 60px;
 }
 .toolsName{
-    padding: 10px 20px;
-    font-size: 18px;
+    padding: 20px 30px;
+    font-size: 30px;
     border-radius: 10px;
     background-color: #464444;
     color: white;
