Edited my tools section
I have changed the style of my tools section into columns.

--- a/style.css
+++ b/style.css
@@ -187,6 +187,15 @@ ul{
     position: relative;
     z-index: -1;
 }
+.container{
+    display: flex;
+    justify-content: space-between;
+}
+.column{
+    width: 45%;
+    padding: 10px;
+    border: none;
+}
 .button-container2{
     display: flex; 
     justify-content: center;
@@ -203,6 +212,11 @@ ul{
     border: none;
     cursor: pointer;
     font-family: "Jersey 25",sans-serif;
+    transition: all 0.5s ease-in-out;
+}
+.toolsName:hover{
+    opacity: 0.5;
+    padding: 30px 40px;
 }
 
 
