--- a/style.css
+++ b/style.css
@@ -280,3 +280,26 @@ ul{
     width: 100%;
     height: 100%;
 }
+
+.column2{
+    width: 45%;
+    padding: 10px;
+    text-align: center;
+    position: relative;
+    z-index: -1;
+}
+.projectTitle{
+    padding-top: 8rem;
+}
+.title{
+    font-size: 25px;
+    position: relative;
+    text-align: center;
+    line-height: 0.8px;
+}
+.subtitle{
+    font-size: 20px;
+    position: relative;
+    text-align: left;
+    line-height: 0.8px;
+}
