--- a/style.css
+++ b/style.css
@@ -93,7 +93,9 @@ body {
 
 /* === CONTACT FORM === */
 .contact {
-    max-width: 700px;
+    position:relative;
+    left:-400px;
+    max-width: 400px;
     margin: 120px auto;
     background: #fff;
     padding: 50px;
